# web

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/: deploybot.yml
.github/workflows/: push-latest.yml  push-tag.yml  test.yml
tests/: test_demos.py  test_endpoints.py
web/: components.py  config.py  database.py  middlewares.py  pages.py  server.py  themes.py
web/endpoints/: catalog.py  components.py  essential.py  examples.py  forms.py  getting_started.py  htmx.py  index.py  layouts.py  search.py  status.py  styles.py  tables.py  web_framework.py
web/endpoints/catalog/: __init__.py  buttons.py  forms.py  index.py  layouts.py  loaders.py  messages.py  tables.py  typography.py
web/endpoints/demos/: __init__.py  bulk_update.py  cascading_selects.py  click_to_edit.py  click_to_load.py  complex_layout.py  delete_row.py  edit_row.py  infinite_scroll.py
web/endpoints/docs/: __init__.py  components.py  getting_started.py  htmx.py  index.py  integrations.py  styles.py  web_framework.py
web/endpoints/examples/: __init__.py  bulk_update.py  cascading_selects.py  click_to_edit.py  click_to_load.py  complex_layout.py  delete_row.py  edit_row.py  index.py  infinite_scroll.py  lazy_loading.py
web/examples/: bulk_update.py  click_to_edit.py  click_to_load.py  delete_row.py  edit_row.py  infinite_scroll.py  lazy_loading.py
web/search/: __init__.py  analysis.py  documents.py  index.py
